# supply-chain

./: .gitignore  CONTRIBUTING.md  README.md  roadmap.md
.bcr/: README.md  config.yml  metadata.template.json
.bcr/metadata-extensions/: presubmit.yml  (+1 more)
docs/: BUILD  MODULE.bazel  README.md
docs/metadata/: BUILD  README.md  defs.md
docs/metadata-extensions/: BUILD  README.md  defs.md
docs/metadata-extensions/rules/: BUILD  package_metadata_override.md
docs/metadata/common/: BUILD  common.md
docs/metadata/licenses/: BUILD  defs.md
docs/metadata/licenses/providers/: BUILD  license_kind_info.md
docs/metadata/licenses/rules/: BUILD  license.md  license_kind.md
docs/metadata/providers/: BUILD  package_attribute_info.md  package_attribute_override_info.md  package_metadata_collection_info.md  package_metadata_info.md  package_metadata_override_info.md  package_metadata_toolchain_info.md  target_metadata_info.md
docs/metadata/purl/: BUILD  purl.md
docs/metadata/rules/: BUILD  package_attribute_override.md  package_metadata.md  package_metadata_toolchain.md
docs/supply_chain_tools/gather_metadata/: BUILD  README.md  gather_metadata.md
examples/: BUILD  MODULE.bazel
lib/supplychain-go/cmd/cdx/: BUILD.bazel  cdx.go
lib/supplychain-go/cmd/sbom/: BUILD.bazel  main.go  sbom_test.go
lib/supplychain-go/cmd/spdx/: BUILD.bazel  spdx.go
lib/supplychain-go/internal/sbom/: BUILD.bazel  classify.go  classify_test.go  genconfig.go
metadata/: BUILD  MODULE.bazel  defs.bzl
metadata-extensions/: BUILD  MODULE.bazel  defs.bzl
metadata-extensions/providers/: BUILD  package_specification_info.bzl
metadata-extensions/rules/: BUILD  package_group.bzl  package_metadata_override.bzl
metadata/attributes/: license.bzl
metadata/common/: BUILD  common.bzl
metadata/common/private/: BUILD  create_package_metadata.bzl  create_target_metadata.bzl
metadata/licenses/: defs.bzl
metadata/licenses/private/rules/: license.bzl
metadata/licenses/providers/: license_kind_info.bzl
metadata/licenses/rules/: BUILD  license.bzl
metadata/private/providers/: package_attribute_info.bzl  package_metadata_info.bzl
metadata/private/purl/: BUILD  percent_encoding.bzl  percent_encoding_test.bzl  tables.bzl
metadata/private/rules/: package_metadata.bzl
metadata/providers/: BUILD  package_attribute_info.bzl  package_attribute_override_info.bzl  package_metadata_collection_info.bzl  package_metadata_info.bzl  package_metadata_override_info.bzl  package_metadata_toolchain_info.bzl  target_metadata_info.bzl
metadata/purl/: BUILD  extensions.bzl  percent_encoding.bzl  percent_encoding_test.bzl  providers.bzl  purl.bzl  starlark.bzl  string.bzl  tables.bzl  type_names.bzl
metadata/purl/private/: BUILD  builder.bzl  builtin_type.bzl  parser.bzl  tables.bzl  tables_test.bzl  type_definitions.bzl
metadata/purl/private/normalization/: BUILD  alpm.bzl  bitbucket.bzl  composer.bzl  github.bzl  hackage.bzl  huggingface.bzl  mlflow.bzl  normalization.bzl  pub.bzl  pypi.bzl
metadata/purl/private/percent_encoding/: BUILD  percent_encoding.bzl  tables.bzl  tables_test.bzl  test.bzl
metadata/purl/private/strings/: BUILD  ascii.bzl  strings.bzl
metadata/purl/private/tests/: BUILD  spec.bzl  spec.custom.bzl  test.bzl
metadata/purl/private/validation/: BUILD  alpm.bzl  chrome_extension.bzl  cpan.bzl  hackage.bzl  helpers.bzl  identity.bzl  julia.bzl  otp.bzl  pub.bzl  pypi.bzl  qualifiers.bzl  swift.bzl  validation.bzl  vscode_extension.bzl
metadata/purl/types/: BUILD  alpm.bzl  apk.bzl  bazel.bzl  bitbucket.bzl  bitnami.bzl  cargo.bzl  chrome_extension.bzl  cocoapods.bzl  composer.bzl  conan.bzl  conda.bzl  cpan.bzl  cran.bzl  deb.bzl  docker.bzl  gem.bzl  generic.bzl  github.bzl  golang.bzl  hackage.bzl  helpers.bzl  hex.bzl  huggingface.bzl  julia.bzl  luarocks.bzl  maven.bzl  mlflow.bzl  npm.bzl  nuget.bzl  oci.bzl  opam.bzl  otp.bzl  pub.bzl  pypi.bzl  qpkg.bzl  requirements.bzl  rpm.bzl  swid.bzl  swift.bzl  (+2 more)
metadata/rules/: BUILD  license.bzl  package_attribute_override.bzl  package_metadata.bzl  package_metadata_toolchain.bzl
metadata/rules/testing/: fake_package_attribute.bzl
purl/: BUILD  MODULE.bazel  purl.bzl
purl.bzl/: BUILD  MODULE.bazel  purl.bzl
purl/private/: BUILD  builder.bzl  parser.bzl
purl/private/normalization/: BUILD  alpm.bzl  bitbucket.bzl  github.bzl  hackage.bzl  huggingface.bzl  mlflow.bzl  normalization.bzl  pub.bzl  pypi.bzl
purl/private/percent_encoding/: test.bzl
purl/private/strings/: BUILD  ascii.bzl  bytes.bzl  bytes_test.bzl  chrord.bzl
purl/private/tests/: BUILD  spec.bzl  spec.custom.bzl  test.bzl
purl/private/validation/: chrome_extension.bzl  cpan.bzl  hackage.bzl  julia.bzl  otp.bzl  pypi.bzl  swift.bzl  validation.bzl  vscode_extension.bzl
releasing/: module_to_dir.sh
rules_license/: MODULE.bazel  README.md
tests/: MODULE.bazel
tests/metadata-extensions/rules/package_metadata_override/: BUILD  target_group_test.bzl
tests/purl/ansible_type/: BUILD  MODULE.bazel  ansible_type.bzl
tests/purl/module_extension/: BUILD  ansible_type_registration_test.bzl  apk_override.bzl  builtin_type_registration_test.bzl  purl_type_override_test.bzl  registration_test.bzl  root_apko_override.bzl  root_override_precedence_test.bzl
tests/purl/rules_apko/: BUILD  MODULE.bazel  dependency_apko_type.bzl
tools/: BUILD  MODULE.bazel
tools/examples/: README.md
tools/examples/lib/: BUILD  private_lib.cc  private_lib.h
tools/examples/my_org/licenses/: BUILD
tools/examples/sample_reports/: licenses_used.bzl
tools/examples/sbom/: sbom.bzl
tools/examples/server/: BUILD  server_sbom.golden
tools/examples/src/: BUILD
tools/gather_metadata/: BUILD  README.md  core.bzl  filtering_test.bzl  gather_metadata.bzl  integration_test.bzl  providers.bzl  rule_filters.bzl  serialization.bzl  serialization_integration_test.bzl  serialization_test.bzl  test_fixtures.bzl  trace.bzl
tools/rules_license/: BUILD
tools/rules_license/licenses/spdx/: BUILD
tools/sbom/: BUILD  cdx.bzl  cyclonedx.bzl  providers.bzl  sbom.bzl  spdx.bzl
(+62 files in other folders)
