module(
    name = "supply-chain-docs",
    version = "HEAD",
)


bazel_dep(
    name = "bazel_skylib",
    version = "1.8.2",
)
bazel_dep(
    name = "stardoc",
    version = "0.8.0",
)

#
# Modules from this repository.
#

bazel_dep(
    name = "package_metadata",
    # Always overridden to use local path.
    version = "HEAD",
)

#
# Overrides from modules from this repository.
#

local_path_override(
    module_name = "package_metadata",
    path = "../metadata",
)

bazel_dep(
    name = "supply_chain_tools",
    # Always overridden to use local path.
    version = "HEAD",
)
local_path_override(
    module_name = "supply_chain_tools",
    path = "../tools",
)

bazel_dep(
    name = "supply-chain-go",
    # Always overridden to use local path.
    version = "HEAD",
)
local_path_override(
    module_name = "supply-chain-go",
    path = "../lib/supplychain-go",
)
