module(
    name = "supply_chain_tests",
    version = "",  # Automatically updated by release pipeline.
)

bazel_dep(name = "rules_testing", version = "0.9.0")
bazel_dep(name = "package_metadata", version = "HEAD")
bazel_dep(name = "package_metadata_extensions", version = "HEAD")

local_path_override(
    module_name = "package_metadata",
    path = "../metadata",
)

local_path_override(
    module_name = "package_metadata_extensions",
    path = "../metadata-extensions",
)
