module(
    name = "supply_chain_tools",
    version = "",  # Automatically updated by release pipeline.
)

# Do not update to newer versions until you need a specific new feature.
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(
    name = "package_metadata", 
    version = "HEAD",  # Automatically updated by release pipeline.
)
bazel_dep(
    name = "supply-chain-go", 
    version = "0.0.5",  # Automatically updated by release pipeline.
)


# Development tools
local_path_override(module_name = "package_metadata", path = "../metadata")
local_path_override(module_name = "supply-chain-go", path = "../lib/supplychain-go")

bazel_dep(name = "rules_python", version = "1.5.1", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.1.4", dev_dependency = True)
