module(
    name = "rules_apko_test",
    version = "HEAD",
)

bazel_dep(name = "package_metadata", version = "HEAD")

purl_types = use_extension("@package_metadata//purl:extensions.bzl", "purl_types")
purl_types.type(
    name = "apko",
    normalize_file = "//:apko_override.bzl",
    normalize_function = "normalize_apko",
    validation_file = "//:apko_override.bzl",
    validation_function = "validate_apko",
)
