load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cdx_lib",
    srcs = ["cdx.go"],
    importpath = "github.com/bazel-contrib/supply-chain/lib/supplychain-go/cmd/cdx",
    visibility = ["//visibility:private"],
    deps = [
        "//:supplychain-go",
        "//internal/sbom",
        "@com_github_cyclonedx_cyclonedx_go//:cyclonedx-go",
    ],
)

go_binary(
    name = "cdx",
    embed = [":cdx_lib"],
    visibility = ["//visibility:public"],
)
