load("@rules_go//go:def.bzl", "go_binary", "go_test")

go_binary(
    name = "sbom",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = ["//internal/sbom"],
)

go_test(
    name = "sbom_test",
    srcs = ["sbom_test.go"],
    data = [":sbom"],
    deps = [
        "//internal/sbom",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@rules_go//go/runfiles",
    ],
)
